Fix overflow in .m-product-card > .h-text-overflow

--- a/Static/css/comunidapp.css
+++ b/Static/css/comunidapp.css
@@ -616,6 +616,13 @@ a:hover{
     width: 250px;
 }
 
+div .m-product-card > .h-text-overflow{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 200px;
+}
+
 .btn:hover{
     color: var(--grey);
 }
